--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/googlemap.js"></script>
+        <script src="scripts/services/collegefactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
