--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,8 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
+                <li><a href="#/addfilter">add filters</a></li>
+                <li><a href="#/googlemap">google map</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
@@ -98,6 +100,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/googlemap.js"></script>
         <script src="scripts/services/collegefactory.js"></script>
+        <script src="scripts/controllers/addfilter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
