--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,9 @@
       </div>
     </div>
 
-    <div class="container">
+    <!--PLW Changed to fluid so the content goes full width-->
+    <!--<div class="container">-->
+    <div class="container-fluid">
     <div ng-view=""></div>
     </div>
 
