add filter changes, college list

--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,9 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-                <li><a href="#/addfilter">add filters</a></li>
-                <li><a href="#/googlemap">google map</a></li>
+                <li><a href="#/addfilter">My Criteria</a></li>
+                <li><a href="#/collegelist">List of Colleges</a></li>
+                <li><a href="#/googlemap">Plan A Trip</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
@@ -103,6 +104,7 @@
         <script src="scripts/controllers/googlemap.js"></script>
         <script src="scripts/services/collegefactory.js"></script>
         <script src="scripts/controllers/addfilter.js"></script>
+        <script src="scripts/controllers/collegelist.js"></script>
         <!-- endbuild -->
 </body>
 </html>
