--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,7 @@
         <script src="scripts/services/collegefactory.js"></script>
         <script src="scripts/controllers/criteria.js"></script>
         <script src="scripts/controllers/collegelist.js"></script>
+        <script src="scripts/controllers/plantrip.js"></script>
         <!-- endbuild -->
 </body>
 </html>
