--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
               <li data-ng-class="{active: isActive('/criteria')}"><a href="#/criteria">My Criteria</a></li>
               <li data-ng-class="{active: isActive('/collegelist')}"><a href="#/collegelist">List of Colleges</a></li>
               <li data-ng-class="{active: isActive('/googlemap')}"><a href="#/googlemap">Plan A Trip</a></li>
+              <li data-ng-class="{active: isActive('/plantrip')}"><a href="#/plantrip">Plan Trip</a></li>
               <li data-ng-class="{active: isActive('/about')}"><a ng-href="#/about">About</a></li>
               <li data-ng-class="{active: isActive('/contact')}"><a ng-href="#/contact">Contact</a></li>
             </ul>
