--- a/app/index.html
+++ b/app/index.html
@@ -52,8 +52,7 @@
               <li data-ng-class="{active: isActive('/home')}"><a href="#/">Home</a></li>
               <li data-ng-class="{active: isActive('/criteria')}"><a href="#/criteria">My Criteria</a></li>
               <li data-ng-class="{active: isActive('/collegelist')}"><a href="#/collegelist">List of Colleges</a></li>
-              <li data-ng-class="{active: isActive('/googlemap')}"><a href="#/googlemap">Plan A Trip</a></li>
-              <li data-ng-class="{active: isActive('/plantrip')}"><a href="#/plantrip">Plan Trip</a></li>
+              <li data-ng-class="{active: isActive('/plantrip')}"><a href="#/plantrip">Plan A Trip</a></li>
               <li data-ng-class="{active: isActive('/about')}"><a ng-href="#/about">About</a></li>
               <li data-ng-class="{active: isActive('/contact')}"><a ng-href="#/contact">Contact</a></li>
             </ul>
@@ -127,7 +126,6 @@
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/googlemap.js"></script>
         <script src="scripts/services/collegefactory.js"></script>
         <script src="scripts/controllers/criteria.js"></script>
         <script src="scripts/controllers/collegelist.js"></script>
