--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- PLW Place CDNs Here -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
 
-    <!--  OLD VERSION <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />  -->
-
+    <!-- (app) causes the cssmin task in grunt to read the files from app/bower etc-->
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
+    <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
-
     <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
     <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog.css" />
     <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog-theme-default.css" />
@@ -30,7 +28,7 @@
     <!-- endbuild -->
 
 
-      <!-- build:css(.tmp) styles/main.css -->
+      <!-- build:css(app) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -116,9 +114,6 @@
     <!--<script src="bower_components/angular-bootstrap/dist/ui-bootstrap.js"></script>-->
 
 
-
-
-
     <!-- Replacing: NOTE (.) with ({.tmp,app}) causes usemin to pull from .tmp and app directories and will build a full vendor file ...-->
     <!-- items below will ve turned into vendor.js file.. put CDN items above  ...-->
 
@@ -137,15 +132,16 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/nav.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/services/collegefactory.js"></script>
-        <script src="scripts/controllers/criteria.js"></script>
-        <script src="scripts/controllers/collegelist.js"></script>
-        <script src="scripts/controllers/plantrip.js"></script>
-        <!-- endbuild -->
-</body>
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/services/collegefactory.js"></script>
+    <script src="scripts/controllers/nav.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/criteria.js"></script>
+    <script src="scripts/controllers/collegelist.js"></script>
+    <script src="scripts/controllers/plantrip.js"></script>
+    <!-- endbuild -->
+
+  </body>
 </html>
