--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
     <script src="bower_components/angular-odometer/dist/angular-odometer.js"></script>
     <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
     <script src="bower_components/angular-smart-table/dist/smart-table.js"></script>
+    <script src="bower_components/satellizer/dist/satellizer.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
