--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">collegeApp</a>
+            <a class="navbar-brand" href="#/">Find Me A College</a>
           </div>
 
           <div ng-controller="NavCtrl" class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -76,7 +76,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> Created by: Paul Winter</p>
       </div>
     </div>
 
