--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />-->
     <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
     <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog.css" />
     <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog-theme-default.css" />
@@ -97,30 +97,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
 
-<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-sanitize.min.js"></script>-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
-<!--<script src="bower_components/angular/angular.js"></script>-->
-<!--<script src="bower_components/angular-resource/angular-resource.js"></script>-->
-<!--<script src="bower_components/angular-route/angular-route.js"></script>-->
-<!--<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>-->
-<!--<script src="bower_components/jquery/jquery.js"></script>-->
-<!--<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
-
-<!--<script src="bower_components/angular-bootstrap/dist/ui-bootstrap.js"></script>-->
-
-
-<!-- Replacing: NOTE (.) with ({.tmp,app}) causes usemin to pull from .tmp and app directories and will build a full vendor file ...-->
-<!-- items below will ve turned into vendor.js file.. put CDN items above  ...-->
 
 <!--BUILD.... SCRIPTS...-->
 <!-- build:js({.tmp,app}) scripts/vendor.js -->
 <!-- bower:js -->
-<!--THIS WAS CAUSING ERRORS... BECAUSE ANGULAR IS ALREADY LOADED VIA CDN ABOVE -->
-<!--<script src="bower_components/angular/angular.js"></script>-->
 <script src="bower_components/jquery/jquery.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<!--<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
