Adding Search For College Page...

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
                     <li data-ng-class="{active: isActive('/criteria')}"><a href="#!/criteria">My Criteria</a></li>
                     <li data-ng-class="{active: isActive('/collegelist')}"><a href="#!/collegelist">List of Colleges</a></li>
                     <li data-ng-class="{active: isActive('/plantrip')}"><a href="#!/plantrip">Plan A Trip</a></li>
+                    <li data-ng-class="{active: isActive('/searchCollege')}"><a href="#!/searchCollege">Search Colleges</a></li>
                     <li data-ng-class="{active: isActive('/about')}"><a ng-href="#!/about">About</a></li>
                     <li data-ng-class="{active: isActive('/contact')}"><a ng-href="#!/contact">Contact</a></li>
                 </ul>
@@ -143,6 +144,7 @@
 <script src="scripts/controllers/criteria.js"></script>
 <script src="scripts/controllers/collegelist.js"></script>
 <script src="scripts/controllers/plantrip.js"></script>
+<script src="scripts/controllers/searchcollege.js"></script>
 <!-- endbuild -->
 
 
